...
            "state": "translated",
            "value": "連線至另一部電腦"
          }
        }
      }
    },
    "Connect computer": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Conectar computador"
          }
...
